--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 					<div id="header">
 						<header>
 							<h1 id="title">
-								<a href="index.html" id="ti"><center>BEN JUNIOR | CREIA EM <span id="j">JESUS</span></center></a>
+								<a href="https://benjuni.github.io/inicio/" id="ti"><center>BEN JUNIOR | CREIA EM <span id="j">JESUS</span></center></a>
 							</h1>
 						</header>	
 					</div>
