--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
 					<div id="header">
 						<header>
 							<h1 id="title">
-								<a href="https://benjuni.github.io/inicio/" id="ti"><center>BEN JUNIOR | CREIA EM <span id="j">JESUS</span></center></a>
+								<a href="index.html" id="ti"><center>BEN JUNIOR | CREIA EM <span id="j">JESUS</span></center></a>
 							</h1>
 						</header>	
 					</div>
@@ -39,9 +39,8 @@
 						</center>	
 					</nav>	
 				</div>
-				<br><a href="mailto:bjuniorel@gmail.com?subject=Oi!&body=<OLÁ BEN JÚNIOR>" class="oi"><center><strong><p class="oi">---</p></strong><p class="oi">MANDE-ME UM OI!</p><strong><p class="oi">---</p></strong></center>
-					<img src="img/oi.gif" alt="oi">
-				</a>
+				<br>
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfzUUBhMOeR0TrsY5vSDNMKa1vZTD4GifkkAE-62MtXlYI95g/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 			</div>
 		</center>
 		<a href="#"><img src="img/seta.png" id="cima" alt="Voltar para cima"></a>
