--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div id="header">
 						<header>
 							<h1 id="title">
-								<a href="https://benjuni.github.io/inicio/" id="ti"><center>BEN JUNIOR | CREIA EM <span id="j">JESUS</span></center></a>
+								<a href="#" id="ti"><center>BEN JUNIOR | CREIA EM <span id="j">JESUS</span></center></a>
 							</h1>
 						</header>	
 					</div>
@@ -151,7 +151,10 @@
 					<source src="audios/cd2/Vou me declarar.mp3" type="audio/mpeg">
 				</audio></center>
 			</div>
+			<br>
+			<center><iframe src="https://wordwall.net/pt/embed/640e033c94ee43e8b97edfad275b9db5?themeId=22&templateId=71" width="50%" height="380" frameborder="0" allowfullscreen></iframe></center>
 		</center>
-		<br><br><br><a href="#" class="cima"><img src="img/seta.png" class="cima" alt="Voltar para cima" style="transition: 1s;"></img>
+		<br><br><br>
+		<a href="#" class="cima"><img src="img/seta.png" class="cima" alt="Voltar para cima" style="transition: 1s;"></img>
 	</body>
 </html>
